Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoNormal>Aquí andamos <span class=SpellE>uwu</span></p>
+<p class=MsoNormal>AquÃ­ andamos <span class=SpellE>uwu</span></p>
 
 <p class=MsoNormal><o:p>&nbsp;</o:p></p>
 
